# acst-dl

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  acst-dl-config.json.example  acst-dl.py  docker-compose.yml  pyproject.toml  requirements.txt  web_app.py
.github/workflows/: docker-publish.yml
templates/: base.html  config.html  files.html  index.html
