[tool.poetry]
name = "acst-dl"
version = "0.1.0"
description = "Acast Downloader Script"
authors = ["User"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.15"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
pyinstaller = "^6.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
