[tool.poetry]
name = "acst-dl"
version = "0.1.0"
description = "A Podcast MP3 Downloader"
authors = ["User"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.15"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
pyinstaller = "^6.15.0"
mutagen = "^1.47.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
